--- a/deploy/helm/magda/charts/elasticsearch/values.yaml
+++ b/deploy/helm/magda/charts/elasticsearch/values.yaml
@@ -1,27 +1,26 @@
 production: false
 image: {}
 client:
-  resources: {}
-  pluginsInstall: "" # e.g. "repository-gcs"
+  pluginsInstall: ""
   heapSize: "256m"
   replicas: 1
+  resources:
+    requests:
+      cpu: 50m
+      memory: 500Mi
 data:
-  resources: {}
   storage: 200Gi
-  pluginsInstall: "" # e.g. "repository-gcs"
+  pluginsInstall: ""
   heapSize: "512m"
+  resources:
+    requests:
+      cpu: 400m
+      memory: 1000Mi
 master:
-  pluginsInstall: "" # e.g. "repository-gcs"
+  pluginsInstall: ""
+  resources:
+    requests:
+      cpu: 50m
+      memory: 900Mi
 backup:
   googleApplicationCreds: {}
-  #storageClass: "ssd"
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
