--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -27,6 +27,31 @@ gateway:
     enabled: false
   enableAuthEndpoint: true
   ckanRedirectionDomain: "ckan.data.gov.au"
+  csp:
+    directives:
+      scriptSrc:
+      - "''self''"
+      - "''unsafe-inline''" # For VWO, hopefully we can remove this soon
+      - "data:" # Also for VWO
+      - browser-update.org
+      - dev.visualwebsiteoptimizer.com
+      - platform.twitter.com
+      - www.googletagmanager.com
+      - www.google-analytics.com
+      - rum-static.pingdom.net
+      - https://cdnjs.cloudflare.com/ajax/libs/rollbar.js/2.4.1/rollbar.min.js
+      - https://tagmanager.google.com/debug
+      - http://assets.zendesk.com/embeddable_framework/main.js
+      - https://assets.zendesk.com/embeddable_framework/main.js
+      objectSrc:
+      - "''none''"
+      sandbox: # We run the sandbox because we have to have unsafe-inline, when we remove unsafe inline we should remove this
+      - allow-scripts
+      - allow-same-origin
+      - allow-popups
+      - allow-forms
+      - allow-popups-to-escape-sandbox
+      reportUri: https://sdga.report-uri.com/r/d/csp/enforce
 combined-db:
   resources:
     requests:
