--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -11,5 +11,7 @@ resources:
   requests:
     cpu: 10m
     memory: 30Mi
+  limits:
+    cpu: 100m
 disableAuthenticationFeatures: false
 service: {}
