--- a/deploy/helm/magda/charts/correspondence-api/values.yaml
+++ b/deploy/helm/magda/charts/correspondence-api/values.yaml
@@ -5,7 +5,9 @@ image: {}
 gitHubIssuesUrl:
 resources:
   requests:
-    cpu: 100m
+    cpu: 10m
     memory: 50Mi
+  limits:
+    cpu: 50m
 smtpPort: 587
 defaultRecipient: "mail@example.com"
