--- a/deploy/helm/magda/charts/indexer/values.yaml
+++ b/deploy/helm/magda/charts/indexer/values.yaml
@@ -5,7 +5,9 @@ elasticsearch:
   useGcsSnapshots: false
 resources:
   requests:
-    cpu: 200m
+    cpu: 100m
     memory: 250Mi
+  limits:
+    cpu: 250m
 makeSnapshots: false
 readSnapshots: false
