Moved things around to work with magda-boilerplate

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -2,6 +2,8 @@ global:
   useCombinedDb: true
   useCloudSql: false
   externalUrl: https://dev.magda.io
+  image:
+    pullPolicy: Always
   rollingUpdate:
     maxUnavailable: 1
 
