--- a/deploy/helm/magda/charts/ingress/templates/ingress.yaml
+++ b/deploy/helm/magda/charts/ingress/templates/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
   - hosts:
     - {{ .Values.hostname }}
-    secretName: magda-cert-tls
+    secretName: {{ .Values.tlsSecretName | default "magda-cert-tls" }}
   {{- end }}
   rules:
   - http:
