--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -7,7 +7,7 @@ global:
   exposeNodePorts: false
   image:
     repository: "data61"
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   defaultAdminUserId: "00000000-0000-4000-8000-000000000000"
   logLevel: INFO
   noDbAuth: false
