--- a/deploy/helm/magda/charts/gateway/templates/service.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/service.yaml
@@ -13,6 +13,6 @@ spec:
   selector:
     service: gateway
   type: {{ .Values.service.type }}
-{{- if .Values.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.loadBalancerIP | quote }}
+{{- if .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.service.loadBalancerIP | quote }}
 {{- end }}
