--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -6,6 +6,7 @@ global:
   image:
     repository: "localhost:5000/data61"
     tag: "latest"
+    pullPolicy: Always
   noDbAuth: true
   useCloudSql: false
   useCombinedDb: true
