--- a/scripts/package.json
+++ b/scripts/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.19.4",
     "nodemon": "^1.11.0",
+    "pkg": "^4.3.4",
     "pwgen": "^0.1.6",
     "strip-ansi": "^4.0.0",
     "strip-json-comments": "^2.0.1",
