Added connectors as chart.

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -18,6 +18,7 @@ tags:
 ingress:
   hostname: dev.magda.io
   ingressClass: nginx
+  
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
   enableAuthEndpoint: true
@@ -54,6 +55,7 @@ gateway:
       - allow-forms
       - allow-popups-to-escape-sandbox
       reportUri: https://sdga.report-uri.com/r/d/csp/enforce
+
 combined-db:
   waleBackup:
     method: WAL
@@ -64,6 +66,7 @@ combined-db:
       fileName: TerriaJS-5e042b649f8a.json
   data:
     storage: 250Gi
+
 elasticsearch:
   data:
     heapSize: 500m
@@ -72,6 +75,7 @@ elasticsearch:
     googleApplicationCreds:
       secretName: storage-account-credentials
       fileName: db-service-account-private-key.json
+
 indexer:
   readSnapshots: false
   makeSnapshots: false
@@ -79,9 +83,177 @@ indexer:
     useGcsSnapshots: true
     gcsSnapshotBucket: "magda-es-snapshots-dev"
     gcsSnapshotClient: "default"
+
 web-server:
   fallbackUrl: "https://data.gov.au"
+
 correspondence-api:
   defaultRecipient: "magda-test@googlegroups.com"
   smtpHostname: "smtp.mailgun.org"
   smtpPort: 2525
+
+connectors:
+  config:
+    - image:
+        name: magda-project-open-data-connector
+      id: act
+      name: ACT Government data.act.gov.au
+      sourceUrl: http://www.data.act.gov.au/data.json
+    - image:
+        name: magda-csw-connector
+      id: aims
+      name: Australian Institute of Marine Science
+      sourceUrl: http://data.aims.gov.au/geonetwork/srv/eng/csw
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: aodn
+      name: Australian Oceans Data Network
+      sourceUrl: http://catalogue.aodn.org.au/geonetwork/srv/eng/csw
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: bom
+      name: Bureau of Meteorology
+      sourceUrl: http://www.bom.gov.au/geonetwork/srv/eng/csw
+      pageSize: 100
+    - image:
+        name: magda-ckan-connector
+      id: brisbane
+      name: Brisbane City Council
+      sourceUrl: https://www.data.brisbane.qld.gov.au/data/
+      pageSize: 100
+    - image:
+        name: magda-project-open-data-connector
+      id: hobart
+      name: City of Hobart Open Data Portal
+      sourceUrl: http://data-1-hobartcc.opendata.arcgis.com/data.json
+    - image:
+        name: magda-project-open-data-connector
+      id: launceston
+      name: City of Launceston Open Data
+      sourceUrl: https://data-launceston.opendata.arcgis.com/data.json
+    - image:
+        name: magda-dap-connector
+      id: dap
+      name: CSIRO
+      sourceUrl: https://data.csiro.au/dap/ws/v2/
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: marlin
+      name: CSIRO Marlin
+      sourceUrl: http://www.marlin.csiro.au/geonetwork/srv/eng/csw
+      pageSize: 50
+    - image:
+        name: magda-ckan-connector
+      id: dga
+      name: data.gov.au
+      sourceUrl: https://data.gov.au/
+      pageSize: 1000
+      ignoreHarvestSources:
+        - "*"
+    - image:
+        name: magda-csw-connector
+      id: environment
+      name: Department of the Environment and Energy
+      sourceUrl: http://www.environment.gov.au/fed/csw
+      pageSize: 100
+    - image:
+        name: magda-project-open-data-connector
+      id: esta
+      name: ESTA Open Data
+      sourceUrl: http://data-esta000.opendata.arcgis.com/data.json
+    - image:
+        name: magda-csw-connector
+      id: ga
+      name: Geoscience Australia
+      sourceUrl: http://www.ga.gov.au/geonetwork/srv/en/csw
+      pageSize: 100
+    - image:
+        name: magda-project-open-data-connector
+      id: logan
+      name: Logan City Council
+      sourceUrl: http://data-logancity.opendata.arcgis.com/data.json
+    - image:
+        name: magda-project-open-data-connector
+      id: melbourne
+      name: Melbourne Data
+      sourceUrl: https://data.melbourne.vic.gov.au/data.json
+    - image:
+        name: magda-csw-connector
+      id: mrt
+      name: Mineral Resources Tasmania
+      sourceUrl: http://www.mrt.tas.gov.au/web-catalogue/srv/eng/csw
+      pageSize: 100
+    - image:
+        name: magda-project-open-data-connector
+      id: moretonbay
+      name: Moreton Bay Regional Council Data Portal
+      sourceUrl: http://data.moretonbay.qld.gov.au/data.json
+    - image:
+        name: magda-csw-connector
+      id: metoc
+      name: 'Navy Meteorology and Oceanography (METOC) '
+      sourceUrl: http://www.metoc.gov.au/geonetwork/srv/en/csw
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: neii
+      name: National Environmental Information Infrastructure
+      sourceUrl: http://neii.bom.gov.au/services/catalogue/csw
+      pageSize: 100
+    - image:
+        name: magda-ckan-connector
+      id: nsw
+      name: New South Wales Government
+      sourceUrl: https://data.nsw.gov.au/data/
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: sdinsw
+      name: NSW Land and Property
+      sourceUrl: https://sdi.nsw.gov.au/csw
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: qspatial
+      name: 'Queensland Spatial Catalogue - QSpatial '
+      sourceUrl: "http://qldspatial.information.qld.gov.au/catalogueadmin/csw"
+      pageSize: 100
+    - image:
+        name: magda-ckan-connector
+      id: qld
+      name: Queensland Government
+      sourceUrl: https://data.qld.gov.au/
+      pageSize: 100
+    - image:
+        name: magda-ckan-connector
+      id: sa
+      name: South Australia Government
+      sourceUrl: https://data.sa.gov.au/data/
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: listtas
+      name: Tasmania TheList
+      sourceUrl: https://data.thelist.tas.gov.au:443/datagn/srv/eng/csw
+      pageSize: 100
+    - image:
+        name: magda-csw-connector
+      id: tern
+      name: Terrestrial Ecosystem Research Network
+      sourceUrl: http://data.auscover.org.au/geonetwork/srv/eng/csw
+      pageSize: 100
+    - image:
+        name: magda-ckan-connector
+      id: vic
+      name: Victoria Government
+      sourceUrl: https://www.data.vic.gov.au/data/
+      pageSize: 100
+    - image:
+        name: magda-ckan-connector
+      id: wa
+      name: Western Australia Government
+      sourceUrl: http://catalogue.beta.data.wa.gov.au/
+      pageSize: 100
