--- a/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
@@ -36,9 +36,7 @@ spec:
       containers:
       - name: es-master
         resources:
-          requests:
-            cpu: 0m
-            memory: 0Mi
+{{ toYaml .Values.data.resources | indent 10 }}
         securityContext:
           privileged: true
           capabilities:
