Simplify header structure and fix some responsive glitches

--- a/deploy/helm/magda/charts/content-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/deployment.yaml
@@ -19,6 +19,7 @@ spec:
         command: [
             "node",
             "/usr/src/app/component/dist/index.js",
+            "--authApiUrl", "http://authorization-api/v0",
             "--listenPort", "80",
             "--dbHost", "content-db",
             "--dbPort", "5432"
