--- a/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
@@ -9,7 +9,7 @@ metadata:
 spec:
   strategy:
     rollingUpdate:
-      maxUnavailable: {{ .Values.global.rollingUpdate.maxUnavailable | default 0 }}
+      maxUnavailable: 0
   replicas: 3
   template:
     metadata:
@@ -36,13 +36,18 @@ spec:
       containers:
       - name: es-master
         resources:
-{{ toYaml .Values.data.resources | indent 10 }}
+{{ toYaml .Values.master.resources | indent 10 }}
         securityContext:
           privileged: true
           capabilities:
             add:
               - IPC_LOCK
         image: {{ template "dockerimage" . }}
+        readinessProbe:
+          tcpSocket:
+            port: transport
+          initialDelaySeconds: 30
+          periodSeconds: 10
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
           tcpSocket:
