registry api client is now generated from apidocjs version swagger.json

--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -7,7 +7,7 @@
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
     "watch": "tsc -p tsconfig-build.json --watch",
-    "generate": "generate-registry-typescript ./src/generated/registry",
+    "generate": "generate-api-documentation --config ../magda-apidocs-server --output ../magda-apidocs-server/build && generate-registry-typescript ../magda-apidocs-server/build/swagger.json ./src/generated/registry",
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
     "dev": "yarn run watch"
   },
