--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -518,6 +518,7 @@ Publish Helm Chart:
   except:
     - branches
     - triggers
+  dependencies: []
   image:
     name: dtzar/helm-kubectl
   cache:
@@ -531,7 +532,6 @@ Publish Helm Chart:
     - pip install --upgrade awscli==1.14.5 s3cmd==2.0.1 python-magic
 
     # Run deploy
-    - aws configure
     - cd deploy/helm
     - mkdir -p chart-repo
     - aws s3 sync s3://magda-charts/ chart-repo
