--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -531,6 +531,9 @@ Publish Helm Chart:
     - apk -v --update add python py-pip groff less mailcap
     - pip install --upgrade awscli==1.14.5 s3cmd==2.0.1 python-magic
 
+    # Init helm
+    - helm init --client-only
+
     # Run deploy
     - cd deploy/helm
     - mkdir -p chart-repo
