--- a/magda-apidocs-server/package.json
+++ b/magda-apidocs-server/package.json
@@ -9,7 +9,8 @@
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.47-0"
+    "@magda/scripts": "^0.0.47-0",
+    "apidoc-plugin-schema": "^0.1.8"
   },
   "proxy": {
     "/server-config.js": {
