--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -542,24 +542,24 @@ Publish Helm Chart:
     - helm repo index chart-repo
     - aws s3 sync chart-repo s3://magda-charts/ --acl public-read
 
-Deploy Released Tags As Staging:
-  <<: *runAsPreview
-  stage: deploy-staging
-  when: on_success
-  only:
-    - /^v.*RC.*$/
-  except:
-    - master
-    - branches
-  environment:
-    name: staging/$CI_COMMIT_REF_NAME
-    url: https://$CI_COMMIT_REF_SLUG.dev.magda.io
-    on_stop: Stop Staging
-  script:
-    # Get version from lerna json
-    - apk add --update jq
-    - TAG=$(jq -r ".version" lerna.json)
-    - helm upgrade $CI_COMMIT_REF_SLUG deploy/helm/magda --install --recreate-pods --namespace $CI_COMMIT_REF_SLUG -f deploy/helm/preview.yml --set global.image.repository=data61,global.image.tag=$TAG,ingress.hostname=$CI_COMMIT_REF_SLUG.dev.magda.io,global.externalUrl=https://$CI_COMMIT_REF_SLUG.dev.magda.io --timeout 1200 --wait
+# Deploy Released Tags As Staging:
+#   <<: *runAsPreview
+#   stage: deploy-staging
+#   when: on_success
+#   only:
+#     - /^v.*RC.*$/
+#   except:
+#     - master
+#     - branches
+#   environment:
+#     name: staging/$CI_COMMIT_REF_NAME
+#     url: https://$CI_COMMIT_REF_SLUG.dev.magda.io
+#     on_stop: Stop Staging
+#   script:
+#     # Get version from lerna json
+#     - apk add --update jq
+#     - TAG=$(jq -r ".version" lerna.json)
+#     - helm upgrade $CI_COMMIT_REF_SLUG deploy/helm/magda --install --recreate-pods --namespace $CI_COMMIT_REF_SLUG -f deploy/helm/preview.yml --set global.image.repository=data61,global.image.tag=$TAG,ingress.hostname=$CI_COMMIT_REF_SLUG.dev.magda.io,global.externalUrl=https://$CI_COMMIT_REF_SLUG.dev.magda.io --timeout 1200 --wait
 
 Stop Staging:
   <<: *stopPreview
