Fixed up config for preview and dev.

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -18,6 +18,11 @@ tags:
 ingress:
   hostname: dev.magda.io
   ingressClass: nginx
+  enableTls: true
+  domains:
+    - '*.magda.io'
+    - '*.dev.magda.io'
+    - magda.io
   
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
