--- a/deploy/helm/magda/charts/content-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
           httpGet:
-            path: /v0/content/logo.bin
+            path: /v0/healthz
             port: 80
           initialDelaySeconds: 10
           periodSeconds: 10
