Upgraded terriajs server to 2.7.4
Improved the full data preview.

Made SSL for previews work again.

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -19,10 +19,7 @@ ingress:
   hostname: dev.magda.io
   ingressClass: nginx
   enableTls: true
-  domains:
-    - '*.magda.io'
-    - '*.dev.magda.io'
-    - magda.io
+  useDefaultCertificate: true
   
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
