--- a/deploy/helm/magda/charts/ingress/templates/ingress.yaml
+++ b/deploy/helm/magda/charts/ingress/templates/ingress.yaml
@@ -14,7 +14,9 @@ spec:
   tls:
   - hosts:
     - {{ .Values.hostname }}
+    {{- if not .Values.useDefaultCertificate}}
     secretName: {{ .Values.tlsSecretName | default "magda-cert-tls" }}
+    {{- end }}
   {{- end }}
   rules:
   - http:
