--- a/magda-preview-map/package.json
+++ b/magda-preview-map/package.json
@@ -84,7 +84,7 @@
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push",
     "compile": "gulp release",
-    "build": "npm rebuild node-sass && yarn run gulp release",
+    "build": "yarn run gulp release",
     "dev": "yarn start && gulp watch"
   },
   "magda": {
