--- a/magda-content-api/package.json
+++ b/magda-content-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/content-api",
-  "version": "0.0.47-RC4",
+  "version": "0.0.48-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -13,7 +13,7 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.47-RC4",
+    "@magda/typescript-common": "^0.0.48-0",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "jsonwebtoken": "^7.4.1",
@@ -22,7 +22,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.47-RC4",
+    "@magda/scripts": "^0.0.48-0",
     "@types/chai": "^4.1.2",
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.96",
