--- a/magda-dap-connector/package.json
+++ b/magda-dap-connector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/dap-connector",
   "description": "MAGDA DAP Connector",
-  "version": "0.0.47-RC4",
+  "version": "0.0.48-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
@@ -16,7 +16,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@magda/scripts": "^0.0.47-RC4",
+    "@magda/scripts": "^0.0.48-0",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.14",
     "@types/request": "^2.0.0",
@@ -31,8 +31,8 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "@magda/registry-aspects": "^0.0.47-RC4",
-    "@magda/typescript-common": "^0.0.47-RC4",
+    "@magda/registry-aspects": "^0.0.48-0",
+    "@magda/typescript-common": "^0.0.48-0",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "moment": "^2.17.1",
