Add pancake as dependencies to web-server

--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -24,6 +24,8 @@
     "@types/mocha": "^2.2.41",
     "@types/morgan": "^1.7.35",
     "@types/nock": "^8.2.1",
+    "@types/node-sass": "^3.10.32",
+    "@types/clean-css": "^3.4.30",
     "@types/request": "2.47.0",
     "@types/sinon": "^2.3.3",
     "@types/supertest": "^2.0.2",
@@ -47,7 +49,29 @@
     "request": "2.85.0",
     "sitemap": "^1.13.0",
     "urijs": "^1.18.12",
-    "yargs": "^8.0.2"
+    "yargs": "^8.0.2",
+    "node-sass": "^4.9.3",
+    "clean-css": "^4.2.1",
+    "@gov.au/accordion": "^3.0.5",
+    "@gov.au/animate": "^1.0.0",
+    "@gov.au/body": "^2.0.7",
+    "@gov.au/breadcrumbs": "^2.0.3",
+    "@gov.au/buttons": "^3.0.1",
+    "@gov.au/core": "^3.0.0",
+    "@gov.au/cta-link": "^2.1.1",
+    "@gov.au/footer": "^2.1.3",
+    "@gov.au/grid-12": "^2.0.5",
+    "@gov.au/header": "^4.1.1",
+    "@gov.au/link-list": "^2.1.1",
+    "@gov.au/page-alerts": "^2.0.5",
+    "@gov.au/pancake": "^1.2.2",
+    "@gov.au/pancake-json": "^1.0.5",
+    "@gov.au/pancake-react": "^1.1.2",
+    "@gov.au/pancake-sass": "^1.3.2",
+    "@gov.au/select": "^2.0.5",
+    "@gov.au/skip-link": "^2.0.6",
+    "@gov.au/tags": "^3.1.1",
+    "@gov.au/text-inputs": "^2.0.6"
   },
   "config": {
     "docker": {
