--- a/magda-apidocs-server/package.json
+++ b/magda-apidocs-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/apidocs-server",
   "description": "The MAGDA in-browser api documentation.",
-  "version": "0.0.46-RC1",
+  "version": "0.0.46",
   "license": "Apache-2.0",
   "scripts": {
     "build": "generate-api-documentation --config $PWD/apidoc.json --output $PWD/build",
@@ -9,7 +9,7 @@
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.46-RC1"
+    "@magda/scripts": "^0.0.46"
   },
   "proxy": {
     "/server-config.js": {
