--- a/magda-registry-aspects/package.json
+++ b/magda-registry-aspects/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/registry-aspects",
-  "version": "0.0.46-RC1",
+  "version": "0.0.46",
   "description": "Common aspects for use with the registry.",
   "scripts": {},
   "author": "",
