--- a/magda-web-server/Dockerfile
+++ b/magda-web-server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:6
-
+ADD component/setup.sh /setup.sh
 RUN mkdir -p /usr/src/app
 COPY . /usr/src/app
 WORKDIR /usr/src/app/component
-ENTRYPOINT [ "node", "/usr/src/app/component/dist/index.js" ]
+CMD ["/setup.sh"]
