--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -39,6 +39,7 @@
     "supertest": "^3.0.0",
     "typed-promisify": "^0.4.0",
     "typescript": "~2.5.0",
+    "node-sass": "^4.9.3",
     "xml2js": "^0.4.19"
   },
   "dependencies": {
@@ -50,33 +51,12 @@
     "sitemap": "^1.13.0",
     "urijs": "^1.18.12",
     "yargs": "^8.0.2",
-    "node-sass": "^4.9.3",
-    "clean-css": "^4.2.1",
-    "@gov.au/accordion": "^3.0.5",
-    "@gov.au/animate": "^1.0.0",
-    "@gov.au/body": "^2.0.7",
-    "@gov.au/breadcrumbs": "^2.0.3",
-    "@gov.au/buttons": "^3.0.1",
-    "@gov.au/core": "^3.0.0",
-    "@gov.au/cta-link": "^2.1.1",
-    "@gov.au/footer": "^2.1.3",
-    "@gov.au/grid-12": "^2.0.5",
-    "@gov.au/header": "^4.1.1",
-    "@gov.au/link-list": "^2.1.1",
-    "@gov.au/page-alerts": "^2.0.5",
-    "@gov.au/pancake": "^1.2.2",
-    "@gov.au/pancake-json": "^1.0.5",
-    "@gov.au/pancake-react": "^1.1.2",
-    "@gov.au/pancake-sass": "^1.3.2",
-    "@gov.au/select": "^2.0.5",
-    "@gov.au/skip-link": "^2.0.6",
-    "@gov.au/tags": "^3.1.1",
-    "@gov.au/text-inputs": "^2.0.6"
+    "clean-css": "^4.2.1"
   },
   "config": {
     "docker": {
       "name": "data61/magda-web-server",
-      "include": "node_modules dist Dockerfile"
+      "include": "node_modules dist Dockerfile setup.sh"
     }
   },
   "magda": {
