--- a/deploy/helm/magda/charts/web-server/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: web
         command: [
-            "node", "/usr/src/app/component/dist/index.js",
+            "/usr/src/app/component/setup.sh",
             "--config", "/etc/config/config.json",
             "--listenPort", "80",
             "--baseExternalUrl", {{ .Values.global.externalUrl | quote }},
@@ -25,7 +25,7 @@ spec:
           httpGet:
             path: "/"
             port: 80
-          initialDelaySeconds: 10
+          initialDelaySeconds: 120
           periodSeconds: 10
           timeoutSeconds: 10
 {{- if .Values.global.enableLivenessProbes }}
