--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -17,41 +17,48 @@
   "devDependencies": {
     "@magda/scripts": "^0.0.48-0",
     "@types/chai": "^4.0.1",
+    "@types/clean-css": "^3.4.30",
     "@types/config": "0.0.32",
+    "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.0.39",
+    "@types/fs-extra": "^5.0.4",
     "@types/helmet": "0.0.37",
     "@types/lodash": "^4.14.68",
     "@types/mocha": "^2.2.41",
     "@types/morgan": "^1.7.35",
     "@types/nock": "^8.2.1",
     "@types/node-sass": "^3.10.32",
-    "@types/clean-css": "^3.4.30",
+    "@types/recursive-readdir": "^2.2.0",
     "@types/request": "2.47.0",
     "@types/sinon": "^2.3.3",
     "@types/supertest": "^2.0.2",
+    "@types/tempy": "^0.1.0",
     "@types/urijs": "^1.15.34",
     "@types/xml2js": "^0.4.0",
     "@types/yargs": "^6.6.0",
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
+    "node-sass": "^4.9.3",
     "sinon": "^2.4.1",
     "supertest": "^3.0.0",
     "typed-promisify": "^0.4.0",
     "typescript": "~2.5.0",
-    "node-sass": "^4.9.3",
     "xml2js": "^0.4.19"
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.48-0",
     "@magda/web-client": "^0.0.48-0",
+    "clean-css": "^4.2.1",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.15.3",
     "morgan": "^1.9.0",
+    "recursive-readdir": "^2.2.2",
     "request": "2.85.0",
     "sitemap": "^1.13.0",
+    "tempy": "^0.2.1",
     "urijs": "^1.18.12",
-    "yargs": "^8.0.2",
-    "clean-css": "^4.2.1"
+    "yargs": "^8.0.2"
   },
   "config": {
     "docker": {
