--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -52,6 +52,7 @@
     "clean-css": "^4.2.1",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.15.3",
+    "fs-extra": "^7.0.0",
     "morgan": "^1.9.0",
     "recursive-readdir": "^2.2.2",
     "request": "2.85.0",
