Take open data connector license from dataset level to distribution level and add basic black box test. Fixes #1500

--- a/magda-project-open-data-connector/tsconfig.json
+++ b/magda-project-open-data-connector/tsconfig.json
@@ -9,6 +9,7 @@
             "@magda/typescript-common/dist/*": [
                 "../node_modules/@magda/typescript-common/src/*"
             ]
-        }
+        },
+        "lib": ["es2017"]
     }
 }
