--- a/magda-project-open-data-connector/tsconfig-build.json
+++ b/magda-project-open-data-connector/tsconfig-build.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "declaration": true,
         "outDir": "dist",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "lib": ["es2017", "dom"]
     },
     "include": ["src"]
 }
