--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -22,6 +22,7 @@
     "prepare": "pancake"
   },
   "dependencies": {
+    "@gov.au/pancake-sass": "2.1.0",
     "@gov.au/accordion": "^3.0.5",
     "@gov.au/animate": "^1.0.0",
     "@gov.au/body": "^2.0.7",
@@ -37,7 +38,6 @@
     "@gov.au/pancake": "^1.2.2",
     "@gov.au/pancake-json": "^1.0.5",
     "@gov.au/pancake-react": "^1.1.2",
-    "@gov.au/pancake-sass": "^2.1.0",
     "@gov.au/select": "^2.0.5",
     "@gov.au/skip-link": "^2.0.6",
     "@gov.au/tags": "^3.1.1",
