--- a/magda-csw-connector/tsconfig-web.json
+++ b/magda-csw-connector/tsconfig-web.json
@@ -4,6 +4,13 @@
         "declaration": false,
         "target": "es5",
         "baseUrl": ".",
-        "lib": ["dom", "es5", "scripthost", "es2015.core", "es2015.promise"]
+        "lib": [
+            "dom",
+            "es5",
+            "scripthost",
+            "es2015.core",
+            "es2015.promise",
+            "ES2017"
+        ]
     }
 }
