--- a/magda-csw-connector/tsconfig.json
+++ b/magda-csw-connector/tsconfig.json
@@ -9,6 +9,7 @@
             "@magda/typescript-common/dist/*": [
                 "../node_modules/@magda/typescript-common/src/*"
             ]
-        }
+        },
+        "lib": ["ES2017", "dom"]
     }
 }
