Added missing setup.sh file

--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -55,7 +55,7 @@
   "config": {
     "docker": {
       "name": "data61/magda-scss-compiler",
-      "include": "node_modules dist Dockerfile"
+      "include": "node_modules dist Dockerfile setup.sh"
     },
     "jwtSecret": "squirrel",
     "userId": "00000000-0000-4000-8000-000000000000"
