remove test for now

--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -10,8 +10,7 @@
     "start": "node dist/index.js",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
-    "retag-and-push": "retag-and-push",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
+    "retag-and-push": "retag-and-push"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.49-0",
