--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -30,6 +30,7 @@
     "@types/yargs": "^8.0.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "djv": "^2.1.1",
     "jsverify": "^0.8.2",
     "lazy-seq": "^1.0.0",
     "mocha": "^3.4.2",
