--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/correspondence-api",
   "description": "MAGDA correspondence API",
-  "version": "0.0.48-RC1",
+  "version": "0.0.49-0",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -15,7 +15,7 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.48-RC1",
+    "@magda/typescript-common": "^0.0.49-0",
     "body-parser": "^1.13.2",
     "email-validator": "^2.0.3",
     "express": "^4.13.1",
@@ -29,7 +29,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.48-RC1",
+    "@magda/scripts": "^0.0.49-0",
     "@types/chai": "^4.1.3",
     "@types/email-validator": "^1.0.6",
     "@types/express": "^4.0.35",
