--- a/deploy/helm/magda/charts/content-api/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/configmap.yaml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: "scss-compiler-config"
 data:
-  scssVars: {{ .Values.scssVars }}
+  scssVars: {{ .Values.scssVars | quote }}
