--- a/magda-indexer/package.json
+++ b/magda-indexer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/indexer",
-  "version": "0.0.47-RC4",
+  "version": "0.0.47",
   "description": "Indexes the registry for searching.",
   "scripts": {
     "build": "yarn run compile",
