--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/index.js",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
-    "retag-and-push": "retag-and-push"
+    "retag-and-push": "retag-and-push",
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.49-0",
@@ -21,7 +22,6 @@
     "@types/nock": "^8.2.1",
     "@types/request": "2.47.0",
     "@types/sinon": "^2.3.3",
-    "@types/supertest": "^2.0.2",
     "@types/urijs": "^1.15.34",
     "@types/yargs": "^6.6.0",
     "@types/clean-css": "^3.4.30",
@@ -35,8 +35,6 @@
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
     "sinon": "^2.4.1",
-    "supertest": "^3.0.0",
-    "typed-promisify": "^0.4.0",
     "typescript": "~2.5.0"
   },
   "dependencies": {
