--- a/deploy/helm/magda/charts/content-api/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/configmap.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: "scss-compiler-config"
 data:
+  image: "{{ .Values.image.repository | default .Values.global.image.repository }}/magda-scss-compiler:{{ .Values.image.tag | default .Values.global.image.tag }}"
   scssVars: {{ .Values.scssVars | quote }}
