--- a/deploy/helm/magda/charts/content-api/templates/init-scss-compiler.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/init-scss-compiler.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: init-scss-compiler
         image: "{{ .Values.image.repository | default .Values.global.image.repository }}/magda-scss-compiler:{{ .Values.image.tag | default .Values.global.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy | default .Values.global.image.pullPolicy }}
+        imagePullPolicy: Always
         command:
             - "/usr/src/app/component/setup.sh"
         env:
