- make installation commit to docker image during build - ask npm to rebuild rather than reinstall

--- a/deploy/helm/magda/charts/content-api/templates/init-scss-compiler.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/init-scss-compiler.yaml
@@ -17,8 +17,10 @@ spec:
       - name: init-scss-compiler
         image: "{{ .Values.image.repository | default .Values.global.image.repository }}/magda-scss-compiler:{{ .Values.image.tag | default .Values.global.image.tag }}"
         imagePullPolicy: Always
-        command:
-            - "/usr/src/app/component/setup.sh"
+        command: [
+            "node",
+            "/usr/src/app/component/dist/index.js"
+        ]
         env:
         - name: CONTENT_API_URL
           value: "http://content-api/v0"
