--- a/magda-scss-compiler/Dockerfile
+++ b/magda-scss-compiler/Dockerfile
@@ -3,4 +3,5 @@ ADD component/setup.sh /setup.sh
 RUN mkdir -p /usr/src/app
 COPY . /usr/src/app
 WORKDIR /usr/src/app/component
-CMD ["/setup.sh"]
+RUN ["/setup.sh"]
+ENTRYPOINT [ "node", "/usr/src/app/component/dist/index.js" ]
