Added helm config for correspondence api alwaysSendToDefaultRecipient

--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -88,5 +88,6 @@ web-server:
 
 correspondence-api:
   defaultRecipient: "magda-test@googlegroups.com"
+  alwaysSendToDefaultRecipient: true
   smtpHostname: "smtp.mailgun.org"
   smtpPort: 2525
