--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -91,6 +91,7 @@ web-server:
 
 correspondence-api:
   defaultRecipient: "magda-test@googlegroups.com"
+  alwaysSendToDefaultRecipient: true
   smtpHostname: "smtp.mailgun.org"
   smtpPort: 2525
 
