--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -p tsconfig-build.json --watch",
     "start": "node dist/index.js",
     "test": "mocha --no-deprecation --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
-    "dev": "run-typescript-in-nodemon src/index.ts",
+    "dev": "run-typescript-in-nodemon src/index.ts --defaultRecipient magda@mailinator.com",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push"
