- added username - added http authentication

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -34,8 +34,8 @@ spec:
 {{- if .Values.enableAuthEndpoint }}
             "--enableAuthEndpoint", {{ .Values.enableAuthEndpoint | quote }},
 {{- end }}
-{{- if .Values.webAccessRequirePassword }}
-            "--webAccessRequirePassword", {{ .Values.webAccessRequirePassword | quote }},
+{{- if .Values.enableWebAccessControl }}
+            "--enableWebAccessControl", {{ .Values.enableWebAccessControl | quote }},
 {{- end }}
             "--proxyRoutesJson", "/etc/config/routes.json",
             "--helmetJson", "/etc/config/helmet.json",
@@ -75,7 +75,12 @@ spec:
             secretKeyRef:
               name: auth-secrets
               key: jwt-secret
-{{- if .Values.webAccessRequirePassword }}
+{{- if .Values.enableWebAccessControl }}
+        - name: WEB_ACCESS_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: web-access-secret
+              key: username
         - name: WEB_ACCESS_PASSWORD
           valueFrom:
             secretKeyRef:
