--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.3",
     "ejs": "^2.3.3",
     "express": "^4.15.3",
+    "express-basic-auth": "^1.1.5",
     "express-session": "^1.11.3",
     "gravatar": "^1.6.0",
     "helmet": "^3.12.0",
