Fixed correspondence api not accepting alwaysSendToDefaultRecipient flag.

--- a/deploy/helm/magda/charts/correspondence-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/correspondence-api/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             "--smtpPort", {{ .Values.smtpPort | default 587 | quote }},
             "--smtpSecure", {{ .Values.smtpSecure | default true | quote }},
             "--defaultRecipient", {{ .Values.defaultRecipient | quote }},
-            "--alwaysSendToDefaultRecipient", {{.Values.alwaysSendToDefaultRecipient}}
+            "--alwaysSendToDefaultRecipient", {{.Values.alwaysSendToDefaultRecipient | quote}}
         ]
         livenessProbe:
           httpGet:
